--- a/css/index.css
+++ b/css/index.css
@@ -4,3 +4,4 @@
     --font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --font-size-base: 16px;
 }
+/*prueba para ver si funciona para ti */
