--- a/css/index.css
+++ b/css/index.css
@@ -4,4 +4,8 @@
     --font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --font-size-base: 16px;
 }
-/*prueba para ver si funciona para ti */
+/*prueba para ver si funciona para ti *
+body {
+font family: var(--font-family);
+font size: var(--font-size-base);
+color : var(--primary-color);
