--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,6 @@
     --font-size-base: 16px;
 }
 
-:root {
-    --primary-color: #ffffff;
-    --secondary-color: #000000;
-    --font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    --font-size-base: 16px;
+body {
+    font-size: larger;
 }
